--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     border-radius:10px;
 }
 
+li {
+  list-style-type: none
+}
+
 .visually-hidden {
   position: absolute !important;
   width: 1px !important;
@@ -16,4 +20,8 @@ body {
   clip: rect(0,0,0,0) !important;
   white-space: nowrap !important;
   border: 0 !important;
+}
+
+.inputChecked {
+  text-decoration: line-through;
 }
