--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  margin:0;
   height:100vh;
   width:100vw;
   background-color: rgb(202, 200, 197);
@@ -37,6 +38,7 @@ li {
 
 .inputChecked {
   text-decoration: line-through;
+  background-color: green;
 }
 
 .delete {
@@ -49,6 +51,6 @@ position: absolute;
 right:0;
 }
 
-#todosList {
+#todosList, #todosListChecked {
   position: relative;
 }
