--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@ body {
   height:100vh;
   width:100vw;
   background-color: rgb(202, 200, 197);
+  background-image:url(./background.png);
+  background-size: cover;
 }
 main {
-  width:50%;
+  width:100%;
   margin: auto;
   display:flex;
   flex-direction: column;
@@ -15,7 +17,11 @@ main {
     width:80%;
     border-radius:10px;
 }
-
+h1,h2 {
+  color:#f8a12e;
+  -webkit-text-stroke: .5px black;
+  text-stroke: .5px black;
+}
 li {
   list-style-type: none;
   width:350px;
@@ -38,7 +44,8 @@ li {
 
 .inputChecked {
   text-decoration: line-through;
-  background-color: green;
+  background-color: #2c3d4a;
+  color: #e1dfcc;
 }
 
 .delete {
